--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,11 @@
 *.tar.gz
 *.rar
 
+# Built files
+target
+
+# IntelliJ config files
+*.idea
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
