--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,16 @@
     <build>
         <plugins>
 
+            <!-- Maven Compiler Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
             <!-- JUnit Plugin -->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
